# ml-automation-snowflake

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: plugin.json
.cortex-plugin/: activation.md  plugin.json
agents/: snowflake-connector.md  snowflake-data-engineer.md  snowflake-deployer.md  snowflake-ml-engineer.md  snowflake-reviewer.md
commands/: snowflake-coldstart.md  snowflake-connect.md  snowflake-deploy.md  snowflake-migrate.md  snowflake-pipeline.md  snowflake-sql.md  snowflake-status.md  snowflake-train.md
docs/: index.md
hooks/: hooks.json
schemas/: audit-finding.schema.json  finding.schema.json
skills/snowflake-coldstart/: SKILL.md
skills/snowflake-connect/: SKILL.md
skills/snowflake-deploy/: SKILL.md
skills/snowflake-migrate/: SKILL.md
skills/snowflake-pipeline/: SKILL.md
skills/snowflake-sql/: SKILL.md
skills/snowflake-status/: SKILL.md
skills/snowflake-train/: SKILL.md
templates/: snowflake_utils.py
tests/: conftest.py  test_smoke.py
